update .env.example and

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ FLASK_ENV=development
     # - For MySQL = mysql+pymysql://your_username:your_password@your_host/database_name
 
 
-DATABASE_URI=sqlite:///db.sqlite3
+DATABASE_URI=mysql+pymysql://user:root@127.0.0.1:3306/root
 
 
 #: set secret key and csrf secret key for flask-wtf.
