--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@ venv/
 env/
 profile/
 keys/
-
+ca_module/*.pem
+ca_module/*.key
+csr_module/*.pem
+csr_module/*.key
+teachers_certificates/
 *.db
 *.sqlite3
 db.sqlite3
